fix(install): increase CSS selector specificity by adding wrap class to install styles
Changed `.install` selector to `.install.wrap` to prevent style conflicts and ensure install page styles are properly applied with higher specificity.

--- a/core/install/css/install.less
+++ b/core/install/css/install.less
@@ -3,7 +3,7 @@
 *
 * Included from main.less file
 */
-.install {
+.install.wrap {
 
 	// background image logo dedalo
 	&:before {
